  As for the reverse, if I can come up with a decent way to still keep the original reverse
  code, I will change it to do that. So in short, if you need the color codes to stay
  _exactly_ the way they are, then you shouldn't use the editor on that file. Also, color 
  codes that are 0..9 are translated to 2 digits, ie "2" becomes "02" this is to prevent 
  problems when a number follows directly after the color code. 
- Added support for editting short motds in the win32 editor.
- Added a goto button on the win32 editor toolbar.
- Made the win32 editor window maximizable.
- Added a find text feature to the win32 editor.
- Added HOOKTYPE_LOCAL_OPER (first param = aClient of oper, second param = 1 if the user
  just became an oper, 0 if they just -o'ed)
- Added a system to allow modules to create snomasks using functions SnomaskAdd and SnomaskDel
- Fixed ban version crash and another read-after-free.
- Fixed problem with make custommodule and multiple EXLIBS arguments (EXLIBS="-la -lb -lc").
- Fixed a bug with +b and +e involving how trimming should occur when a mask is too long.
  (#0001103) reported by Troco.
- Fixed a bug in aliases reported by darko``
- Updated help.conf and unreal32docs.html (#0001111) reported by SciFi, AngryWolf, and Zerwas.
- Cleaned up some code for /die under Windows
- Fixed ircd.c compile error discovered by Ravage
- Made unreal work with Linux under PPC (#0001105,#0000929) reported by drevlan and Cruiser
  and thanks to drevlan for donating a linux ppc shell to help track down the problem
- Fixed a problem where Unreal would sometimes die without outputting information about the
  crash under Windows
- Made /restart work under Windows in NT service mode.
- Fixed a documentation typo (#0001027) reported by Soldier007
- Fixed a bunch of logging problems reported by LRL (#0001034).
- Fixed a problem with a fix for +b/+e reported by AngryWolf (#0001117)