@@ -541,7 +541,9 @@ ban ip {
 /*
  * NEW: ban server {}
  * OLD: Server Q:Line
- * Disables a server from connecting to you.
+ * Disables a server from connecting to the network.
+ * if the server links to a remote server, local server
+ * will disconnect from the network.
  * Syntax is as follows:
  * ban server {
  *	mask "(server name)";
