@@ -2273,3 +2273,5 @@ seen. gmtime warning still there
 - Fixed a documentation typo (#0001027) reported by Soldier007
 - Fixed a bunch of logging problems reported by LRL (#0001034).
 - Fixed a problem with a fix for +b/+e reported by AngryWolf (#0001117)
+- Fixed a documentation typo reported by Z3l3zT (#0001066)
+- Clarified what ban server {} does, suggested by Joolz (#0001110)
